# mbot_firmware

./: CMakeLists.txt  README.md  build_all.sh  mbot-upload-firmware  setup.sh  upload.sh
include/config/: mbot_classic_config.h  mbot_omni_config.h
mbot/include/mbot/defs/: mbot_params.h
mbot/include/mbot/utils/: utils.h
mbot/src/utils/: utils.c
python/: mbot_311_test.py  mbot_balbot_test.py  mbot_test_pwm.py
src/: CMakeLists.txt  controller.c  controller.h  mbot.c  mbot.h  mbot_311_firmware.c  mbot_311_firmware.h  mbot_balbot.c  mbot_balbot.h  mbot_channels.h  mbot_classic.c  mbot_classic.h  mbot_comms.c  mbot_comms.h  mbot_controller.c  mbot_controller.h  mbot_odometry.c  mbot_odometry.h  mbot_odometry_omni.c  mbot_odometry_omni.h  mbot_omni.c  mbot_omni.h  mbot_print.c  mbot_print.h
tests/: CMakeLists.txt  mbot_calibrate_classic.c  mbot_calibrate_classic_auto.c  mbot_calibrate_classic_manual.c  mbot_calibrate_omni.c
tests_deprecated/: mbot_calibrate_classic_auto.c  mbot_calibrate_omni.c  mbot_fake_calibration.c
